--- a/src/components/InputEnhanced/index.module.css
+++ b/src/components/InputEnhanced/index.module.css
@@ -1,30 +1,29 @@
 .container {
-    display: inline-block;
     position: relative;
     border: 1px solid;
     width: 10em;
-    z-index: 0;
+    display: inline-flex;
+    align-items: center;
+    overflow: hidden;
 }
 .input {
+    width: 100%;
+    height: 100%;
     display: block;
     border: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
     font-size: inherit;
-    line-height: inherit;
+    font-family: inherit;
+    background-color: transparent;
 }
 .input:focus {
     outline: 0;
 }
 .enhance-panel {
     position: absolute;
-    left: 0;
-    right: 0;
     top: 0;
     bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
-    z-index: -1;
 }
