--- a/src/components/ArticalItem/index.module.css
+++ b/src/components/ArticalItem/index.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    align-items: center;
+    padding: 5px 0px;
 }
 .footer {
     display: flex;
@@ -9,4 +9,7 @@
 .custom-span {
     font-size: 0.5em;
     color: #999;
+}
+.poster {
+    margin-left: 10px;
 }
