--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-@import '//at.alicdn.com/t/font_2034516_iqydkden7pg.css';
+@import '//at.alicdn.com/t/font_2034516_qh7ehid7wpa.css';
 @import './assets/css/css/index.css';
+@import '../node_modules/antd/dist/antd.css';
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   user-select: none;
 }
-a {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
+:root {
+  --color1: #999;
+}
+.cv1 {
+  color: var(--color1);
 }
