--- a/src/components/ArticalItem/index.module.css
+++ b/src/components/ArticalItem/index.module.css
@@ -1,6 +1,8 @@
 .container {
     display: flex;
     padding: 5px 0px;
+    color: initial;
+    font-size: 1rem;
 }
 .footer {
     display: flex;
