--- a/src/components/ArticalPage/index.module.css
+++ b/src/components/ArticalPage/index.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    color: #000;
 }
 .header {
     padding: 10px;
@@ -27,4 +28,23 @@
     border: 1px solid var(--color1);
     border-radius: 50px;
     box-shadow: 0 1px #aaa;
+}
+.relative-artical-left {
+    width: 80%;
+    padding-right: 10px;
+}
+.relative-artical-left small {
+    color: rgb(163, 163, 163);
+}
+.relative-artical-right {
+    width: 20%;
+}
+.relative-artical-poster {
+    width: 100%;
+    padding: 5px;
+    border-radius: 15px;
+}
+.menu-title {
+    font-weight: 700;
+    color: #000;
 }
